--- a/styles.css
+++ b/styles.css
@@ -159,7 +159,7 @@ text-align: center;
     margin: 0px auto;
     margin-top: -30px;
 /*    border: 2px solid #f7bbd1;
-    border-radius: 50px;*/
+    */
     padding: 10px;
 }
 
