--- a/styles.css
+++ b/styles.css
@@ -158,7 +158,7 @@ text-align: center;
     font-family: 'Comfortaa', cursive;
     margin: 0px auto;
     margin-top: -30px;
-/*    border: 2px solid #f7bbd1;
+/*    
     */
     padding: 10px;
 }
