--- a/styles.css
+++ b/styles.css
@@ -213,6 +213,16 @@ text-align: center;
 }
 
 
+.costs-text a {
+    color: black;
+}
+
+.costs-text a:hover {
+    color: black;
+    font-weight: 900;
+}
+
+
 .main .include {
     font-family: 'Comfortaa', cursive;
     margin: 0px auto;
@@ -254,7 +264,7 @@ text-align: center;
 
 
 .bxslider {
-    margin: 40px auto;
+margin: 20px auto;
 
 
 
@@ -273,7 +283,7 @@ text-align: center;
 .reviews .reviews-title {
     text-align: center;
     font-size: 35px;
-    margin-top: 100px;
+    margin-top: 50px;
 }
 
 
@@ -375,36 +385,57 @@ max-height: 65px;
     background-color: #fcc9dc;
     position: relative;
     display: flex;
-    flex-direction: row-reverse;
     justify-content: space-around;
+
     align-items: center;
 }
 
-.contacts-footer
-{   position: absolute;
-    bottom: -20px;
-    left: 50px;
+.contacts-footer {  
+    display: flex;
+    flex-wrap: wrap;
     font-family: 'Comfortaa', cursive;
     font-weight: 400;
     font-size: 20px;
+    line-height: 30px;
     height: 50px;
     padding: 0;
+    margin-top: 50px;
 }
+
+
+
 
 .logo-footer img {
-    width: 250px;
+    width: 200px;
     margin-top: 30px;
-
+    margin: 0 auto;
 
 }
 
+.social-buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 70px;
+
+}
+
+
 .social {
-    margin-right: 50px;
+    margin-right: 20px;
 }
 
 .social img {
-    width: 60px;
+    width: 45px;
 }
+
+
+
+
+
+
+
+
 
 
 
