--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 
 body {
     background-color: #fcc9dc;
+   width: 1280px;
 /*    background: url(images/background-1.jpg) 50% 50% no-repeat;*/
 
 }
@@ -11,18 +12,26 @@ body {
 }
 
 
-.main-menu ul {
+.main-menu {
+    margin: auto;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-around; 
+}
+
+
+.menu-buttons {
     margin: 0;
     padding: 0;
     list-style: none;
     display: flex;
-    flex-wrap: wrap;
-
+    justify-content: space-between; 
+    flex-wrap: nowrap;
  }
 
-.main-menu li {
+.menu-buttons li {
     font-family: 'Comfortaa', cursive;
-    margin: auto;
+    margin: auto 20px;
 
 
 
@@ -52,9 +61,7 @@ text-align: center;
 .main-menu a {
     text-decoration: none;
     font-size: 22px; 
-
     color: black;
-
     font-family: 'Comfortaa', cursive;
 
   
@@ -106,8 +113,6 @@ text-align: center;
     font-family: 'Comfortaa', cursive;
     width: 1280px;
     margin: 10px auto 0px;
-/*   
-    border-radius: 50px;*/
     padding: 10px;
 
 }
@@ -433,21 +438,20 @@ max-height: 65px;
 
 
 
-
-
-
-
-
-
-@media screen and (max-width: 800px) {
-.main-menu ul {
+@media screen and (max-width: 425px) {
+.about-text {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+    justify-content: space-around;
+    align-items: stretch;
+    padding-right: 25px;
+
+
 }
 }
 
-
+/*
 
 .main-menu ul {
     margin: 0;
@@ -497,49 +501,5 @@ max-height: 65px;
 
 
 
-/*Карусель!!!!!!!!*/
-
-
-div#carousel { 
-    perspective: 1200px; 
-    background: none; 
-    padding-top: 10%; 
-    font-size:0; 
-    margin-bottom: 3rem; 
-    overflow: hidden; 
-  }
-  figure#spinner { 
-    transform-style: preserve-3d; 
-    height: 370px; 
-    transform-origin: 50% 50% -500px; 
-    transition: 1s; 
-  } 
-  figure#spinner img { 
-    width: 40%; max-width: 425px; 
-    position: absolute; left: 30%;
-    transform-origin: 50% 50% -500px;
-    outline:1px solid transparent; 
-  }
-  figure#spinner img:nth-child(1) { transform:rotateY(0deg); 
-  }
-  figure#spinner img:nth-child(2) { transform: rotateY(-45deg); }
-  figure#spinner img:nth-child(3) { transform: rotateY(-90deg); }
-  figure#spinner img:nth-child(4) { transform: rotateY(-135deg); }
-  figure#spinner img:nth-child(5){ transform: rotateY(-180deg); }
-  figure#spinner img:nth-child(6){ transform: rotateY(-225deg); }
-  figure#spinner img:nth-child(7){ transform: rotateY(-270deg); }
-  figure#spinner img:nth-child(8){ transform: rotateY(-315deg); }
-  div#carousel ~ span { 
-    color: #fff; 
-    margin: 5%; 
-    display: inline-block; 
-    text-decoration: none; 
-    font-size: 2rem; 
-    transition: 0.6s color; 
-    position: relative; 
-    margin-top: -6rem; 
-    border-bottom: none; 
-    line-height: 0; }
-  div#carousel ~ span:hover { color: #888; cursor: pointer; }
 
 
